# codebase-intelligence

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: README.md  getting-started.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/codebase-intelligence/: 2026-07-17-completion.md  2026-07-17-local-startup.md  2026-07-17-phase-2-completion.md
docs/development/: extending.md  releasing.md
docs/handoffs/: 2026-07-17-codebase-intelligence.precompact.handoff.mdc  2026-07-17-codex-codebase-intelligence.handoff.mdc
docs/operations/: runbook.md
docs/releases/: 0.3.0.md
docs/security/: threat-model.md
docs/superpowers/plans/: 2026-07-17-codebase-intelligence-phase-2.md  2026-07-17-codebase-intelligence.md
src/codebase_intelligence/: __init__.py  __main__.py  cli.py  config.py  container.py  database.py  exceptions.py  job_service.py  lifecycle.py  models.py  observability.py  prompts.py  providers.py  rag_service.py  repository.py  security.py  source_service.py  vector_store.py  worker.py
src/codebase_intelligence/api/: app.py  dependencies.py
src/codebase_intelligence/api/routes/: explorer.py  health.py  jobs.py  query.py  repositories.py  status.py
src/codebase_intelligence/ingestion/: __init__.py  chunker.py  file_filter.py  language_registry.py  pipeline.py  redaction.py  source_loader.py
src/codebase_intelligence/ui/: __init__.py  app.py  client.py  design.py  investigation.py
tests/: __init__.py
tests/api/: __init__.py  test_app.py  test_explorer.py
tests/docs/: test_public_docs.py
tests/eval/: __init__.py  golden_questions.json  test_golden_retrieval.py
tests/fixtures/sample_repo/: README.md
tests/fixtures/sample_repo/src/: auth.py  broken.py  checkout.ts  gateway.py  payments.py
tests/integration/: test_ingestion_pipeline.py  test_job_service.py  test_lifecycle.py  test_rag_service.py  test_source_service.py  test_vector_store.py
tests/ui/: __init__.py  conftest.py  test_app.py  test_client.py  test_investigation.py
tests/unit/: test_cli.py  test_config.py  test_container.py  test_providers.py  test_repository.py
tests/unit/ingestion/: test_chunker.py  test_file_filter.py  test_redaction.py  test_security.py  test_source_loader.py
